# bevy_sprite3d_instanced_tint

./: Cargo.toml  readme.md
examples/: dungeon.rs  sprite.rs  sprite_sheet.rs
src/: lib.rs
